features :
01- added Rank for user.
02- added counter for Folders.
03- added counter for Central Archive.
04 - change attachment global lookup to tawasol attachment.
05- Added - Quick Receive With Launch WF


Fixed issues :
12504: central archive - in central archive OU while adding a paper outgoing or incoming document there is two fields in paper outgoing while only one in incoming <check attached>
12643: central archive - when teh archive user add a new paper outgoing or incoming the ou field should not be mandatory
12310: Delegation - End date is expired still the Out of Office functionality toggle is enabled and functionality too.